# data-toolbox

./: .gitignore  .tool-versions  README.md  ROADMAP.md  build_data.py  pyproject.toml  requirements.txt  task_config.yml
.devcontainer/: .zshrc  Dockerfile  awsconfig  devcontainer.json
.github/workflows/: pipeline.yml
extras/characterai-dumper/: README.md  characterai-dumper-user.js  characterai-dumper.user.js
resources/: config.yaml
scripts/: build.py  normalize.py
toolbox/core/: __init__.py  consts.py  dataset.py  episode.py  filter.py  filter_criteria.py  filters.py  formats.py  models.py  task.py  training_example.py  turns.py  wrapper.py
toolbox/datasets/: __init__.py  aesir.py  ai_dungeon.py  airoboros.py  airoboros2.py  aitown.py  chain_of_thought.py  characterai.py  claude.py  claude_evol_instruct.py  claude_logs.py  claude_multiround.py  clubfloyd.py  common.py  dolly.py  enjim.py  evol_instruct.py  flan.py  flan_cot.py  gpt4all.py  gpt4llm.py  gpteacher.py  kajiwoto.py  light.py  light_dialogue.py  limarp.py  mcstories.py  norobots.py  oasst.py  opencai.py  openorca.py  parlai_mgt.py  parlai_sdgt.py  pygclaude.py  rallio67_instruct.py  rp_data.py  rp_forums.py  rp_guild.py  safe_r1.py  sharegpt.py  (+6 more)
toolbox/filters/: __init__.py  applefilter.py  duplicate_filter.py  english.py  exact_deduplication.py  language_filter.py  length_filter.py  llmslop.py  low_quality_rp.py  refusals.py  similarity.py  similarity_filter.py  suspect_unicode_filter.py  tomato_filter.py  training_example_filter.py
toolbox/formats/: __init__.py  metharme.py  openchat.py  sharegpt.py
toolbox/modules/: __init__.py  chain_of_thought_pdm.py  characterai_pdm.py  cot_pdm.py  discord_vdm.py  enjim_pdm.py  flan_vdm.py  kajiwoto_pdm.py  kajiwoto_vdm.py  light_dialogue_pdm.py  light_pdm.py  parlai_kgm.py  rallio67_instruct_pdm.py  safe_r1_pdm.py  sharegpt_pdm.py  soda_pdm.py  visual_novel_pdm.py
toolbox/parsers/: bb_code.py
toolbox/scripts/: analyze.py  build_dataset.py
toolbox/tasks/: __init__.py  aesir_roleplay.py  aidungeon_text_adventure.py  airoboros2_instruction_following.py  airoboros_guess_instructions.py  airoboros_instruction_following.py  aitown_roleplay.py  characterai_roleplay.py  claude_evol_instruct.py  claude_guess_instruction.py  claude_instruct.py  claude_roleplay.py  clubfloyd_text_adventure.py  dolly_guess_instruction.py  evol_instruct.py  flan_cot_answering.py  gpt4all_question_answering.py  limarp_roleplay.py  mcstories_writing.py  norobots_instruction_following.py  oasst_instruction_following.py  opencai_roleplay.py  openorca_instruction_following.py  pygclaude_roleplay.py  rp_forums_roleplay.py  rp_forums_writing.py  rp_guild_writing.py  rpdata_roleplay.py  sharegpt_instruction_following.py  single_turn_instruction_following.py  soda_reply_generation.py  soda_summarization.py  supercot_instruction_following.py  teatime_roleplay.py  whocars_roleplay.py  wizard_vicuna_question_answering.py
toolbox/utils/: __init__.py  chunking.py  dataset.py  files.py  process.py  prompts.py  strings.py
training/: convert_to_hf.py  finetune.bash  inference.py  supervised-finetune.bash
training/colossalai/: run_clm.py  run_sft.py
training/harubaru-convogpt/: dataset.py  sft.py
training/harubaru_convogpt/: sft.py
(+20 files in other folders)
