[tool.pdm]

[project]
name = "toolbox"
version = "0.1.0"
description = "Code for ingesting data from several sources, formatting it and creating a training dataset."
authors = [
    {name = "0x000011b", email = "0x000011b@proton.me"},
]
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
dependencies = [
    "ijson>=3.1.4",
    "mashumaro>=3.2",
    "regex>=2022.10.31",
    "scikit-learn>=1.2.0",
    "pandas>=1.5.2",
    "pyarrow>=10.0.1",
    "langdetect>=1.0.9",
    "tokenizers>=0.13.2",
    "ansicolors>=1.1.8",
]

[project.optional-dependencies]
dev = [
    "yapf>=0.32.0",
    "toml>=0.10.2",
    "isort>=5.10.1",
    "pylint>=2.15.8",
    "mypy>=0.991",
]
debugging = [
    "pdbpp>=0.10.3",
    "scalene>=1.5.19",
]

[tool.setuptools]
py-modules = ["toolbox"]

[tool.pdm.scripts]
lint = {shell = "pylint --jobs 0 ./toolbox/**/*.py"}
importcheck = "isort --check --diff toolbox"
importfix = "isort toolbox"
stylecheck = "yapf --parallel --diff --recursive toolbox"
stylefix = "yapf --parallel --in-place --recursive toolbox"
typecheck = "mypy --strict toolbox"

[tool.yapf]
based_on_style = "google"

[tool.mypy]
ignore_missing_imports = true
