[tool.pdm]

[project]
name = "toolbox"
version = "0.1.0"
description = "Code for ingesting data from several sources, formatting it and creating a training dataset."
authors = [
    {name = "0x000011b", email = "0x000011b@proton.me"},
]
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
dependencies = [
    "markdownify>=0.11.6",
    "html5lib>=1.1",
    "beautifulsoup4>=4.11.2",
    "ansicolors>=1.1.8",
    "pandas>=1.5.3",
    "mashumaro>=3.5",
    "pyarrow>=11.0.0",
    "sklearn>=0.0.post4",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "yapf>=0.32.0",
    "toml>=0.10.2",
    "isort>=5.10.1",
    "pylint>=2.15.8",
    "mypy>=0.991",
    # I don't think we need to pin the versions here.
    "ftfy",
    "jsonlines",
    "zstandard",
    "tqdm",
]
debugging = [
    "pdbpp>=0.10.3",
    "scalene>=1.5.19",
]

[tool.setuptools]
py-modules = ["toolbox"]

[tool.pdm.scripts]
lint = {shell = "pylint --jobs 0 ./toolbox/**/*.py"}
importcheck = "isort --check --diff toolbox"
importfix = "isort toolbox"
stylecheck = "yapf --parallel --diff --recursive toolbox"
stylefix = "yapf --parallel --in-place --recursive toolbox"
typecheck = "mypy --strict toolbox"

[tool.yapf]
based_on_style = "google"

[tool.mypy]
ignore_missing_imports = true
